-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.11
-
None
-
Linux Boot2Qt_Pyro (gcc-armv7) on Linux Ubuntu_16_04 (gcc-x86_64) - DeveloperBuild, AbortTestingOnFirstFailure
-
5418c8764f3d1b30a72951b29beaa9cf408d1ee9
https://codereview.qt-project.org/#/c/207767/
https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1509783453
https://testresults.qt.io/logs/qt/qtbase/f1fe4a45c73452e923350a3f6e279c6626b6ff79/LinuxUbuntu_16_04x86_64LinuxBoot2Qt_Pyroarmv7GCCqtci-linux-Ubuntu-16.04-x86_64-1-083a1aDeveloperBuild/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1509783487/log.txt.gz
... /home/qt/work/b2qt/toolchain/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -include .pch/Qt5Core -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -DEGL_API_FB=1 -mfloat-abi=hard --sysroot=/home/qt/work/b2qt/toolchain/sysroots/cortexa9hf-neon-poky-linux-gnueabi -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CORE_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DPCRE2_CODE_UNIT_WIDTH=16 -I. -Iglobal -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I../3rdparty/sha3 -I../3rdparty/double-conversion/include -I../3rdparty/double-conversion/include/double-conversion -I../3rdparty/forkfd -I../../include -I../../include/QtCore -I../../include/QtCore/5.11.0 -I../../include/QtCore/5.11.0/QtCore -I.moc -I../3rdparty/pcre2/src -I/home/qt/work/b2qt/toolchain/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/include/glib-2.0 -I/home/qt/work/b2qt/toolchain/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/lib/glib-2.0/include -I../../mkspecs/devices/linux-imx6-g++ -o .obj/qsemaphore.o thread/qsemaphore.cpp thread/qsemaphore.cpp:156:59: error: large integer implicitly truncated to unsigned type [-Werror=overflow] static const quintptr futexMultiWaiterBit = Q_UINT64_C(1) << 63; ...